# Himalaya-tests

./: .gitignore  README.md  test.sh
test_FindHimalaya/: CMakeLists.txt  test
test_installation/: meson.build  test
test_subproject/: CMakeLists.txt  test
